Add Link and Rail editing

--- a/MapEditor/imgui.ini
+++ b/MapEditor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=1920,1009
+Size=1280,720
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,18 +9,18 @@ Size=400,400
 Collapsed=0
 
 [Window][Viewport]
-Pos=345,0
-Size=1228,1009
+Pos=230,0
+Size=819,720
 Collapsed=0
 
 [Window][Actions]
 Pos=0,0
-Size=345,1009
+Size=230,720
 Collapsed=0
 
 [Window][Actor]
-Pos=1574,0
-Size=345,1009
+Pos=1049,0
+Size=230,720
 Collapsed=0
 
 [Window][Setup]
@@ -43,6 +43,21 @@ Pos=726,465
 Size=468,78
 Collapsed=0
 
+[Window][Add Link]
+Pos=760,442
+Size=400,124
+Collapsed=0
+
+[Window][Add Rail]
+Pos=760,431
+Size=400,123
+Collapsed=0
+
+[Window][Stack actors]
+Pos=19,430
+Size=600,170
+Collapsed=0
+
 [Docking][Data]
-DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1009 CentralNode=1
+DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,720 CentralNode=1
 
