--- a/MapEditor/imgui.ini
+++ b/MapEditor/imgui.ini
@@ -58,6 +58,11 @@ Pos=19,430
 Size=600,170
 Collapsed=0
 
+[Window][Add Actor]
+Pos=440,298
+Size=400,124
+Collapsed=0
+
 [Docking][Data]
 DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,720 CentralNode=1
 
