--- a/MapEditor/imgui.ini
+++ b/MapEditor/imgui.ini
@@ -29,7 +29,7 @@ Size=600,181
 Collapsed=0
 
 [Window][Open level]
-Pos=406,301
+Pos=496,302
 Size=468,118
 Collapsed=0
 
@@ -61,6 +61,11 @@ Collapsed=0
 [Window][Add Actor]
 Pos=440,298
 Size=400,124
+Collapsed=0
+
+[Window][AINB Editor]
+Pos=345,0
+Size=1228,1009
 Collapsed=0
 
 [Docking][Data]
