--- a/MapEditor/MapEditor.vcxproj
+++ b/MapEditor/MapEditor.vcxproj
@@ -110,7 +110,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>imgui</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>imgui;imgui_node_editor</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <FavorSizeOrSpeed>Neither</FavorSizeOrSpeed>
       <Optimization>Disabled</Optimization>
@@ -147,7 +147,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>imgui</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>imgui;imgui_node_editor</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <FavorSizeOrSpeed>Neither</FavorSizeOrSpeed>
       <Optimization>Disabled</Optimization>
@@ -162,6 +162,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Actor.cpp" />
+    <ClCompile Include="AINB.cpp" />
+    <ClCompile Include="AINBEditor.cpp" />
     <ClCompile Include="astc_decomp.cpp" />
     <ClCompile Include="Bfres.cpp" />
     <ClCompile Include="BinaryVectorReader.cpp" />
@@ -184,6 +186,7 @@
     <ClCompile Include="imgui\imgui_stdlib.cpp" />
     <ClCompile Include="imgui\imgui_tables.cpp" />
     <ClCompile Include="imgui\imgui_widgets.cpp" />
+    <ClCompile Include="imgui_node_editor\imnodes.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MapConfig.cpp" />
     <ClCompile Include="MapLoader.cpp" />
@@ -203,6 +206,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h" />
+    <ClInclude Include="AINB.h" />
+    <ClInclude Include="AINBEditor.h" />
     <ClInclude Include="astc_decomp.h" />
     <ClInclude Include="Bfres.h" />
     <ClInclude Include="BinaryVectorReader.h" />
@@ -226,6 +231,8 @@
     <ClInclude Include="imgui\imstb_rectpack.h" />
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
+    <ClInclude Include="imgui_node_editor\imnodes.h" />
+    <ClInclude Include="imgui_node_editor\imnodes_internal.h" />
     <ClInclude Include="MapConfig.h" />
     <ClInclude Include="MapLoader.h" />
     <ClInclude Include="RESTBL.h" />
