Improve UI by using DockSpace

--- a/MapEditor/imgui.ini
+++ b/MapEditor/imgui.ini
@@ -4,8 +4,8 @@ Size=1280,720
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=276,27
+Size=879,680
 Collapsed=0
 
 [Window][Viewport]
@@ -15,13 +15,15 @@ Collapsed=0
 
 [Window][Actions]
 Pos=0,0
-Size=230,720
+Size=1022,720
 Collapsed=0
+DockId=0x00000003,1
 
 [Window][Actor]
-Pos=1049,0
-Size=230,720
+Pos=1024,0
+Size=256,720
 Collapsed=0
+DockId=0x00000004,0
 
 [Window][Setup]
 Pos=340,269
@@ -29,7 +31,7 @@ Size=600,181
 Collapsed=0
 
 [Window][Open level]
-Pos=496,302
+Pos=410,378
 Size=468,118
 Collapsed=0
 
@@ -68,6 +70,16 @@ Pos=345,0
 Size=1228,1009
 Collapsed=0
 
+[Window][Main]
+Pos=0,0
+Size=1022,720
+Collapsed=0
+DockId=0x00000003,0
+
 [Docking][Data]
-DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,720 CentralNode=1
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,720 Split=X
+  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=255,720
+  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=1023,720 Split=X
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=765,720 CentralNode=1 Selected=0x5B0000FE
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=256,720 Selected=0xBB9186EE
 
