Add AINB Node Editor to DockSpace

--- a/MapEditor/imgui.ini
+++ b/MapEditor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=1280,720
+Size=1920,1009
 Collapsed=0
 
 [Window][Debug##Default]
@@ -15,13 +15,13 @@ Collapsed=0
 
 [Window][Actions]
 Pos=0,0
-Size=1022,720
+Size=255,1009
 Collapsed=0
-DockId=0x00000003,1
+DockId=0x00000001,0
 
 [Window][Actor]
-Pos=1024,0
-Size=256,720
+Pos=1664,0
+Size=256,1009
 Collapsed=0
 DockId=0x00000004,0
 
@@ -71,15 +71,25 @@ Size=1228,1009
 Collapsed=0
 
 [Window][Main]
-Pos=0,0
 Size=1022,720
+Collapsed=0
+
+[Window][Map View]
+Pos=257,0
+Size=1405,1009
 Collapsed=0
 DockId=0x00000003,0
 
+[Window][AINB Node Editor]
+Pos=257,0
+Size=1405,1009
+Collapsed=0
+DockId=0x00000003,1
+
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,720 Split=X
-  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=255,720
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1009 Split=X
+  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=255,720 Selected=0x7D8AF184
   DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=1023,720 Split=X
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=765,720 CentralNode=1 Selected=0x5B0000FE
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=765,720 CentralNode=1 Selected=0x06D5B7B7
     DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=256,720 Selected=0xBB9186EE
 
