--- a/MapEditor/imgui.ini
+++ b/MapEditor/imgui.ini
@@ -23,7 +23,6 @@ DockId=0x00000001,0
 Pos=1024,0
 Size=256,720
 Collapsed=0
-DockId=0x00000004,0
 
 [Window][Setup]
 Pos=340,269
@@ -31,7 +30,7 @@ Size=600,181
 Collapsed=0
 
 [Window][Open level]
-Pos=443,365
+Pos=482,359
 Size=468,118
 Collapsed=0
 
@@ -86,10 +85,21 @@ Size=765,720
 Collapsed=0
 DockId=0x00000003,1
 
+[Window][Properties]
+Pos=1024,0
+Size=256,720
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][Add node]
+Pos=307,250
+Size=500,210
+Collapsed=0
+
 [Docking][Data]
 DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,720 Split=X
   DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=255,720 Selected=0x7D8AF184
   DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=1023,720 Split=X
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=765,720 CentralNode=1 Selected=0x06D5B7B7
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=256,720 Selected=0xBB9186EE
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=765,720 CentralNode=1 Selected=0x88AF64DF
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=256,720 Selected=0x199AB496
 
