--- a/MapEditor/MapEditor.vcxproj
+++ b/MapEditor/MapEditor.vcxproj
@@ -199,6 +199,7 @@
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="TextureFormatDecoder.cpp" />
     <ClCompile Include="TextureToGo.cpp" />
+    <ClCompile Include="tinyfiledialogs.c" />
     <ClCompile Include="Util.cpp" />
     <ClCompile Include="VAO.cpp" />
     <ClCompile Include="VBO.cpp" />
@@ -244,6 +245,7 @@
     <ClInclude Include="Texture.h" />
     <ClInclude Include="TextureFormatDecoder.h" />
     <ClInclude Include="TextureToGo.h" />
+    <ClInclude Include="tinyfiledialogs.h" />
     <ClInclude Include="Util.h" />
     <ClInclude Include="VAO.h" />
     <ClInclude Include="VBO.h" />
