--- a/MapEditor/imgui.ini
+++ b/MapEditor/imgui.ini
@@ -96,6 +96,11 @@ Pos=307,250
 Size=500,210
 Collapsed=0
 
+[Window][Confirm revert]
+Pos=860,404
+Size=200,200
+Collapsed=0
+
 [Docking][Data]
 DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,720 Split=X
   DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=255,720 Selected=0x7D8AF184
