--- a/MapEditor/imgui.ini
+++ b/MapEditor/imgui.ini
@@ -4,7 +4,7 @@ Size=1920,1009
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=276,27
+Pos=276,39
 Size=879,680
 Collapsed=0
 
@@ -15,7 +15,7 @@ Collapsed=0
 
 [Window][Actions]
 Pos=0,0
-Size=255,1009
+Size=270,1009
 Collapsed=0
 DockId=0x00000001,0
 
@@ -30,8 +30,8 @@ Size=600,181
 Collapsed=0
 
 [Window][Open level]
-Pos=482,359
-Size=468,118
+Pos=509,380
+Size=702,177
 Collapsed=0
 
 [Window][Generate Hashes (Phive)]
@@ -46,12 +46,12 @@ Collapsed=0
 
 [Window][Add Link]
 Pos=760,442
-Size=400,124
+Size=600,219
 Collapsed=0
 
 [Window][Add Rail]
-Pos=760,431
-Size=400,123
+Pos=715,465
+Size=600,184
 Collapsed=0
 
 [Window][Stack actors]
@@ -61,7 +61,7 @@ Collapsed=0
 
 [Window][Add Actor]
 Pos=440,298
-Size=400,124
+Size=600,186
 Collapsed=0
 
 [Window][AINB Editor]
@@ -74,20 +74,20 @@ Size=1022,720
 Collapsed=0
 
 [Window][Map View]
-Pos=257,0
-Size=1405,1009
+Pos=273,0
+Size=1264,1009
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][AINB Node Editor]
-Pos=257,0
-Size=1405,1009
+Pos=273,0
+Size=1264,1009
 Collapsed=0
 DockId=0x00000003,1
 
 [Window][Properties]
-Pos=1664,0
-Size=256,1009
+Pos=1540,0
+Size=380,1009
 Collapsed=0
 DockId=0x00000004,0
 
@@ -108,8 +108,8 @@ Collapsed=0
 
 [Docking][Data]
 DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1009 Split=X
-  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=255,720 Selected=0x7D8AF184
-  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=1023,720 Split=X
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=765,720 CentralNode=1 Selected=0x88AF64DF
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=256,720 Selected=0x199AB496
+  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=270,720 Selected=0x7D8AF184
+  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=1647,720 Split=X
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1264,720 CentralNode=1 Selected=0x06D5B7B7
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=380,720 Selected=0x199AB496
 
