--- a/MapEditor/MapEditor.vcxproj
+++ b/MapEditor/MapEditor.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="Actor.cpp" />
     <ClCompile Include="AINB.cpp" />
     <ClCompile Include="AINBEditor.cpp" />
+    <ClCompile Include="AINBNode.cpp" />
     <ClCompile Include="AINBNodeDefinitions.cpp" />
     <ClCompile Include="astc_decomp.cpp" />
     <ClCompile Include="Bfres.cpp" />
@@ -187,7 +188,10 @@
     <ClCompile Include="imgui\imgui_stdlib.cpp" />
     <ClCompile Include="imgui\imgui_tables.cpp" />
     <ClCompile Include="imgui\imgui_widgets.cpp" />
-    <ClCompile Include="imgui_node_editor\imnodes.cpp" />
+    <ClCompile Include="imgui_node_editor\crude_json.cpp" />
+    <ClCompile Include="imgui_node_editor\imgui_canvas.cpp" />
+    <ClCompile Include="imgui_node_editor\imgui_node_editor.cpp" />
+    <ClCompile Include="imgui_node_editor\imgui_node_editor_api.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MapConfig.cpp" />
     <ClCompile Include="MapLoader.cpp" />
@@ -210,6 +214,7 @@
     <ClInclude Include="Actor.h" />
     <ClInclude Include="AINB.h" />
     <ClInclude Include="AINBEditor.h" />
+    <ClInclude Include="AINBNode.h" />
     <ClInclude Include="AINBNodeDefinitions.h" />
     <ClInclude Include="astc_decomp.h" />
     <ClInclude Include="Bfres.h" />
@@ -234,8 +239,12 @@
     <ClInclude Include="imgui\imstb_rectpack.h" />
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
-    <ClInclude Include="imgui_node_editor\imnodes.h" />
-    <ClInclude Include="imgui_node_editor\imnodes_internal.h" />
+    <ClInclude Include="imgui_node_editor\crude_json.h" />
+    <ClInclude Include="imgui_node_editor\imgui_bezier_math.h" />
+    <ClInclude Include="imgui_node_editor\imgui_canvas.h" />
+    <ClInclude Include="imgui_node_editor\imgui_extra_math.h" />
+    <ClInclude Include="imgui_node_editor\imgui_node_editor.h" />
+    <ClInclude Include="imgui_node_editor\imgui_node_editor_internal.h" />
     <ClInclude Include="MapConfig.h" />
     <ClInclude Include="MapLoader.h" />
     <ClInclude Include="RESTBL.h" />
@@ -255,6 +264,9 @@
   <ItemGroup>
     <None Include="..\..\..\MapEditor\V2\SourceCode\TotKMapEditor\TotKMapEditor\default.frag" />
     <None Include="..\..\..\MapEditor\V2\SourceCode\TotKMapEditor\TotKMapEditor\default.vert" />
+    <None Include="imgui_node_editor\imgui_bezier_math.inl" />
+    <None Include="imgui_node_editor\imgui_extra_math.inl" />
+    <None Include="imgui_node_editor\imgui_node_editor_internal.inl" />
     <None Include="MapEditor_Bake_Collision.pack" />
     <None Include="picking.frag" />
     <None Include="picking.vert" />
