Made the UI bigger

--- a/MapEditor/imgui.ini
+++ b/MapEditor/imgui.ini
@@ -4,8 +4,8 @@ Size=1920,1009
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=276,39
-Size=879,680
+Pos=-20,692
+Size=48,48
 Collapsed=0
 
 [Window][Viewport]
@@ -15,7 +15,7 @@ Collapsed=0
 
 [Window][Actions]
 Pos=0,0
-Size=270,1009
+Size=248,1009
 Collapsed=0
 DockId=0x00000001,0
 
@@ -31,12 +31,12 @@ Collapsed=0
 
 [Window][Open level]
 Pos=509,380
-Size=702,177
+Size=561,141
 Collapsed=0
 
 [Window][Generate Hashes (Phive)]
 Pos=251,250
-Size=777,220
+Size=932,264
 Collapsed=0
 
 [Window][Export mod]
@@ -61,7 +61,7 @@ Collapsed=0
 
 [Window][Add Actor]
 Pos=440,298
-Size=600,186
+Size=480,148
 Collapsed=0
 
 [Window][AINB Editor]
@@ -74,20 +74,20 @@ Size=1022,720
 Collapsed=0
 
 [Window][Map View]
-Pos=273,0
-Size=1264,1009
+Pos=250,0
+Size=1361,1009
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][AINB Node Editor]
-Pos=273,0
-Size=1264,1009
+Pos=250,0
+Size=1361,1009
 Collapsed=0
 DockId=0x00000003,1
 
 [Window][Properties]
-Pos=1540,0
-Size=380,1009
+Pos=1613,0
+Size=307,1009
 Collapsed=0
 DockId=0x00000004,0
 
@@ -108,8 +108,8 @@ Collapsed=0
 
 [Docking][Data]
 DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1009 Split=X
-  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=270,720 Selected=0x7D8AF184
-  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=1647,720 Split=X
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1264,720 CentralNode=1 Selected=0x06D5B7B7
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=380,720 Selected=0x199AB496
+  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=248,720 Selected=0x7D8AF184
+  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=1670,720 Split=X
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1361,720 CentralNode=1 Selected=0x88AF64DF
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=307,720 Selected=0x199AB496
 
