--- a/MapEditor/imgui.ini
+++ b/MapEditor/imgui.ini
@@ -110,6 +110,6 @@ Collapsed=0
 DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1280,720 Split=X
   DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=255,720 Selected=0x7D8AF184
   DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=1023,720 Split=X
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=714,720 CentralNode=1 Selected=0x88AF64DF
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=714,720 CentralNode=1 Selected=0x06D5B7B7
     DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=307,720 Selected=0x199AB496
 
